--- a/DOC2.html
+++ b/DOC2.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="file:///C:/Users/HALA/index.html">VISIT</a>
+    <a href="file:///C:/Users/HALA/index.html">VisitPage1</a>
+    <br>
+       <a href="file:///C:/Users/HALA/Desktop/index1.html">VisitPage2</a>
     <form>
         <label for="name"> Name </label>   
         <input type="text" name="name">  
@@ -17,4 +19,5 @@
     </form>
     <button>Submit</button>
 </body>
+
 </html>
